--- a/main.css
+++ b/main.css
@@ -1,9 +1,261 @@
-main {
-    text-align: center;
+html {
+	overflow: hidden;
+}
+
+#player {
+	position: absolute;
+	opacity: 0;
+	pointer-events: none;
+}
+
+/* VARS */ aside {
+	--nav_w: 200px;
+	--left_bg_color: #f3f3f3;
+	--right_bg_color: #fff;
+}
+aside {
+	font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	position: absolute;
+	z-index: 2;
+}
+
+details[open] summary {
+	display: none;
+}
+
+details > section {
+	background-image: linear-gradient(to right, var(--left_bg_color) 50%, var(--right_bg_color) 50%);
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden auto;
+}
+details > section > .container {
+	max-width: 70%;
+	min-height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin: 0 auto;
+}
+details > section > .container > * {
+	box-sizing: border-box;
+	padding-top: 40px;
+	height: 100%;
+}
+details nav {
+	width: var(--nav_w);
+	background-color: var(--left_bg_color);
+	display: flex;
+	flex-direction: column;
+	padding-right: 7px;
+}
+nav > * {
+	padding: 8px 10px;
+}
+nav span {
+	text-transform: uppercase;
+	font-size: 9pt;
+	color: #b9c0d0;
+}
+nav a {
+	border-radius: 3px;
+	font-size: 12pt;
+	text-decoration: unset;
+	color: inherit;
+}
+nav a:hover {
+	background-color: #e3e3e5;
+}
+nav a:focus, nav a:active {
+	background-color: #7289da;
+	color: white;
+}
+section:target {
+	animation-name: pulse;
+	animation-direction: normal;
+	animation-duration: 1s;
+	animation-iteration-count: 2;
+	animation-timing-function: ease;
+}
+@keyframes pulse {
+	0% {
+		margin: initial;
+		padding: initial;
+		background-color: initial;
+		border-radius: 3px;
+	}
+	50% {
+		margin: -5px;
+		padding: 5px;
+		background-color: #f3f3f3;
+		border-radius: 3px;
+	}
+	100% {
+		margin: initial;
+		padding: initial;
+		background-color: initial;
+		border-radius: 3px;
+	}
+}
+details > section > .container > section {
+	background-color: var(--right_bg_color);
+	padding-left: 40px;
+	flex: 1;
+	padding-bottom: 50vh;
+}
+details header {
+	margin-bottom: 8px;
+}
+details header > h1 {
+	margin: 0 0 5px;
+	font-size: 13pt;
+	font-weight: bold;
+}
+details header > p {
+	margin: 0;
+	font-size: 8pt;
+	color: #b4b6b9;
+}
+form, fieldset {
+	display: flex;
+	flex-direction: column;
+}
+#config_count article {
+	display: flex;
+	flex-direction: row;
+	margin: 0 -5px;
+}
+#fm_time, #fm_add_time {
+	flex-basis: 0;
+	flex-grow: 1;
+	margin: 0 5px;
+}
+#fm_song input[type=url] {
+	padding-right: 100px;
+}
+form label {
+	color: #72767d;
+	font-size: 9pt;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin: 17px 0 9px;
+}
+form input {
+	width: 100%;
+	padding: 13px;
+	border: solid 1px #c7c9cb;
+	border-radius: 3px;
+	background-color: #fbfbfb;
+	box-sizing: border-box;
+	font-family: inherit;
+	font-size: 12pt;
+	text-overflow: ellipsis;
+}
+form input:disabled {
+	background-color: #fcfcfd;
+	border-color: #eaeaea;
+	cursor: not-allowed;
+}
+form input:active {
+	border-color: #7289da;
+}
+form div {
+	position: relative;
+}
+form input[type=time] {
+	padding-right: 100px;
+	height: 49px;
+}
+form input ~ input[type=submit] {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: fit-content;
+	margin: 5px;
+	padding: 9px;
+}
+input[type=submit] {
+	background-color: #edeef1;
+	border: 0;
+	color: #7f8993;
+	cursor: pointer;
 }
 
 fieldset {
-    padding: 0;
-    border: 0;
-    margin: 0;
+	padding: 0;
+	border: 0;
+	margin: 0;
+}
+
+hr {
+	width: 100%;
+	padding: 0;
+	border: 0;
+	border-top: solid 1px #e2e3e5;
+}
+section > hr {
+	margin: 30px 0;
+}
+
+.container > div {
+	width: 36px;
+	margin-left: 10px;
+	position: relative;
+}
+#btn_exit_config {
+	cursor: pointer;
+	border-radius: 50%;
+	border: solid 2px #ddd;
+	background: transparent;
+	font-size: 20pt;
+	color: #b9bbbd;
+	height: 36px;
+	width: 36px;
+	padding: 0;
+	line-height: 36px;
+	position: fixed;
+	top: 40px;
+	outline: none;
+}
+#btn_exit_config ~ span {
+	width: 36px;
+	text-align: center;
+	position: fixed;
+	top: 80px;
+	text-transform: uppercase;
+	font-size: 10pt;
+	color: #ccc;
+}
+
+#btn_open_config {
+	font-size: 21pt;
+	line-height: 21pt;
+	background: transparent;
+	border: none;
+	position: absolute;
+	right: 10px;
+	bottom: 10px;
+	animation-name: rotate, fade;
+	animation-iteration-count: infinite;
+	animation-duration: 10s, 5s;
+	animation-delay: 5s, 0s;
+	animation-timing-function: cubic-bezier(0.12, 0.66, 0.03, 1.01), ease;
+	opacity: .4;
+	cursor: pointer;
+}
+@keyframes rotate {
+	from {
+		transform: rotateZ(0deg)
+	}
+	to {
+		transform: rotateZ(720deg)
+	}
+}
+@keyframes fade {
+	90% {
+		opacity: 0;
+	}
+	100% {
+		opacity: .4;
+	}
 }
