--- a/main.css
+++ b/main.css
@@ -203,6 +203,8 @@ section > hr {
 	position: relative;
 }
 #btn_exit_config {
+	text-decoration: none;
+	text-align: center;
 	cursor: pointer;
 	border-radius: 50%;
 	border: solid 2px #ddd;
@@ -212,7 +214,7 @@ section > hr {
 	height: 36px;
 	width: 36px;
 	padding: 0;
-	line-height: 36px;
+	line-height: 30px;
 	position: fixed;
 	top: 40px;
 	outline: none;
