#9 - Adicionado parte da galeria
Já é possível alternar entre temas (por enquanto só existe o Blue Flare, então só dá pra colocar ele e tirar ele), mas está dando erro no stylesheet do tema quando é carregado: "Unexpected token {"

--- a/themes/blue_flare/blue_flare.css
+++ b/themes/blue_flare/blue_flare.css
@@ -4,10 +4,6 @@
 	Versão original: Steam Elements
 */
 
-body {
-	margin: 0;
-}
-
 main {
 	position: relative;
 	z-index: 1;
@@ -49,7 +45,7 @@ main {
 	--ball_shadow_spread: 0px;
 }
 #h_org:empty {
-	display: none;
+	visibility: hidden;
 }
 #h_org {
 	font-family: Righteous;
