--- a/styles/main.css
+++ b/styles/main.css
@@ -177,6 +177,57 @@ form, fieldset {
 #fm_song input[type=url] {
 	padding-right: 100px;
 }
+#fm_song section {
+	margin: 5px 0 0;
+    font-size: 8pt;
+    color: #b4b6b9;
+}
+#fm_song #sugestoes {
+	margin: 0;
+	padding: 0;
+	display: inline;
+	cursor: pointer;
+
+	--playlist_color: #000;
+	--song_color: #F44336;
+}
+#fm_song #sugestoes > .icones_clonaveis {
+	display: inline-block;
+    width: 0;
+    overflow: hidden;
+    height: 0;
+}
+#fm_song #sugestoes .sugestao_item:not(:hover) {
+	opacity: .3;
+}
+#fm_song #sugestoes .sugestao_item {
+    border: solid 1px black;
+    border-radius: 50px;
+	padding: 2px 10px 2px 2px;
+	margin: 2px;
+	display: inline-flex;
+	flex-direction: row;
+	color: #737c87;
+}
+#fm_song #sugestoes .sugestao_item .fa-layers {
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+	padding: 3px;
+	margin-right: 4px;
+}
+#fm_song #sugestoes .sugestao_item.playlist {
+	border-color: var(--playlist_color)
+}
+#fm_song #sugestoes .sugestao_item.playlist .fa-layers {
+	background-color: var(--playlist_color)
+}
+#fm_song #sugestoes .sugestao_item.song {
+	border-color: var(--song_color)
+}
+#fm_song #sugestoes .sugestao_item.song .fa-layers {
+	background-color: var(--song_color)
+}
 #fm_theme {
 	display: flex;
 	flex-direction: row;
