--- a/themes/blue_flare/blue_flare.css
+++ b/themes/blue_flare/blue_flare.css
@@ -163,4 +163,31 @@ main {
 
 #btn_open_config {
 	color: white;
+	font-size: 21pt;
+	line-height: 21pt;
+	background: transparent;
+	border: none;
+	position: absolute;
+	right: 10px;
+	bottom: 10px;
+	cursor: pointer;
+	outline: none;
+}
+#btn_open_config:hover {
+	opacity: 1;
+}
+#btn_open_config:not(:hover) {
+	animation-name: fade;
+	animation-iteration-count: infinite;
+	animation-duration: 5s;
+	animation-timing-function: ease;
+	opacity: .2;
+}
+@keyframes fade {
+	80% {
+		opacity: .09;
+	}
+	100% {
+		opacity: .2;
+	}
 }
