--- a/styles/main.css
+++ b/styles/main.css
@@ -174,6 +174,9 @@ form, fieldset {
 	flex-grow: 1;
 	margin: 0 5px;
 }
+#config_song .hide {
+	display: none;
+}
 #fm_song input[type=url] {
 	padding-right: 100px;
 }
@@ -249,7 +252,8 @@ form, fieldset {
 	margin: 0 -20px -23px;
 	padding: 0;
 	background-color: #f0f0f0;
-	max-height: calc(4 * 56px)
+	max-height: calc(4 * 56px);
+	overflow: auto;
 }
 #fm_song ~ #playlist_details ul li {
 	list-style: none;
